Change will paginate page entries info with I18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,11 @@
 
 en:
   hello: "Hello world"
+
+  will_paginate:
+    models:
+      game:
+        zero:  games
+        one:   game
+        few:   games
+        other: games
